Canonical Updated Again

--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!--Languages-->
   <link rel="alternate" hreflang="x-default" href="" />
   <link rel="alternate" hreflang="en_US" href="" />
-  
+
   <!--Browser Compatibility-->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   <!--Website SEO Tags-->
-   <title>IANASYSTEMS &#8211; CODE</title>
-   <meta name="description" content="">
-   <meta name="keywords" content="" />
-   <meta name="googlebot" content="index, follow">
-   <meta name="robots" content="index, follow" />
-   <meta name="revisit-after" content="1 days"/>
-   <meta name="Publisher" content="">
-   <meta name="author" content="@"/>
-   <meta name="distribution" content="global"/>
-   <meta name="copyright" content=" © 2022. All rights reserved"/>
+  <!--Website SEO Tags-->
+  <title>IANASYSTEMS &#8211; CODE</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="" />
+  <meta name="googlebot" content="index, follow">
+  <meta name="robots" content="index, follow" />
+  <meta name="revisit-after" content="1 days" />
+  <meta name="Publisher" content="">
+  <meta name="author" content="@" />
+  <meta name="distribution" content="global" />
+  <meta name="copyright" content=" © 2022. All rights reserved" />
 
-   <link rel="canonical" href="www.ianasystems.com" />
+  <!-- Canonical -->
+  <link rel="canonical" href="www.ianasystems.com" />
 
-   <!--Favicon-->
+  <!--Favicon-->
   <link rel="shortcut icon" href="" type="image/png">
 
   <!-- GOOGLE FONTS -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- LOCAL BOOTSTRAP CSS 4.6.1 -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -68,14 +72,19 @@
   <meta property="og:image:width" content="210">
   <meta property="og:image:height" content="210">
 </head>
+
 <body>
   <!-- ======= Mini Header ======= -->
   <header class="mini-header py-3 mb-3">
     <div class="inner-mini-header container px-lg-0">
       <div class="row justify-content-between align-items-center">
         <div class="mini-header-phone">
-          <a class="text-decoration-none text-dark mr-3" href="tel:+923026021298"><img class="mr-2" width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 302 6021298</a>
-          <a class="text-decoration-none text-dark" href="tel:+923000677488"><img class="mr-2"  width="" height="" src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300 0677488</a>
+          <a class="text-decoration-none text-dark mr-3" href="tel:+923026021298"><img class="mr-2" width="" height=""
+              src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 302
+            6021298</a>
+          <a class="text-decoration-none text-dark" href="tel:+923000677488"><img class="mr-2" width="" height=""
+              src="https://www.hyperlinkinfosystem.com/assets/frontend_assets/img/us-flag.svg" alt=""> +92 300
+            0677488</a>
         </div>
         <div class="mini-header-btn">
           <a class="btn theme-btn border-0 py-2 px-3 mr-2" href="">Order Now</a>
@@ -92,7 +101,9 @@
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light col-xl-12 col-lg-12 col-md-12 col-sm-12 px-lg-0">
           <!-- <a class="logo navbar-brand" href=""><img width="" height="" src="" alt="ianasystems"></a> -->
-          <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse"
+            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -102,7 +113,8 @@
               <a class="nav-item nav-link" href="">Sketch To HTML</a>
               <a class="nav-item nav-link" href="">Adobe XD To HTML</a>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">All Services</a>
+                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown"
+                  aria-expanded="false">All Services</a>
                 <div class="dropdown-menu dropdown-menu-center">
                   <a class="dropdown-item" href="#">InDesign To HTML</a>
                   <div class="dropdown-divider"></div>
@@ -127,11 +139,13 @@
             Website UI Design to <span class="text-color">HTML</span> Services
           </h1>
           <p class="slogan mb-5">
-            Get your website design prototypes and mockups converted into Pixel Perfect, Responsive, and Hand Coded HTML and WordPress websites with our cost effective and white labelled design to code conversion services for agencies.
+            Get your website design prototypes and mockups converted into Pixel Perfect, Responsive, and Hand Coded HTML
+            and WordPress websites with our cost effective and white labelled design to code conversion services for
+            agencies.
           </p>
           <a class="btn theme-btn py-2 px-4" href="" style="font-size: 20px;">Get Started</a>
         </div>
-  
+
         <div class="main-img px-lg-0 col-6">
           <img class="img-fluid" src="img/bg-img.png" alt="">
         </div>
@@ -160,7 +174,9 @@
         </div>
         <div class="core-intro col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">Core <span class="text-color">Development</span> Process</h2>
-          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus
+            doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe
+            voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
@@ -183,7 +199,9 @@
       <div class="row justify-content-between align-items-center">
         <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">PSD to HTML</h2>
-          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus
+            doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe
+            voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
@@ -212,7 +230,9 @@
         </div>
         <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">Figma to HTML</h2>
-          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus
+            doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe
+            voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
@@ -223,7 +243,8 @@
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
           </div>
           <div>
-            Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+            Want to work with us? <a class="btn theme-btn border-0 py-2 px-3 ml-4" href="">Let's Start <i
+                class="fa fa-angle-double-right" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
@@ -235,7 +256,9 @@
       <div class="row align-items-center">
         <div class="col-12 col-lg-6 reverse px-lg-0">
           <h2 class="article-heading mb-4">Responsive Devices</h2>
-          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe voluptatibus alias suscipit qui nobis.</p>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur obcaecati ipsa natus
+            doloribus et temporibus quo voluptatum molestias, tempora tempore explicabo labore unde illum saepe
+            voluptatibus alias suscipit qui nobis.</p>
           <div class="core-list mb-3">
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
             <li class="list-inline-item"><span class="dot mr-3"></span> Tracking System</li>
@@ -263,10 +286,13 @@
           <h2 class="it-heading mb-4">We run all Kinds of IT Services
             that grow your Business
           </h2>
-          <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nisi ipsa, modi officia exercitationem magni ab magnam in quos nobis, error molestias quibusdam vitae provident autem odit maxime saepe quaerat.</p>
+          <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nisi ipsa, modi
+            officia exercitationem magni ab magnam in quos nobis, error molestias quibusdam vitae provident autem odit
+            maxime saepe quaerat.</p>
         </div>
         <div class="col-12 col-lg-4 reverse">
-          <a class="btn btn-light border-0 px-4 mr-3" href="">Let's Start <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+          <a class="btn btn-light border-0 px-4 mr-3" href="">Let's Start <i class="fa fa-angle-double-right"
+              aria-hidden="true"></i></a>
           <a class="btn btn-outline-light py-2 px-4" href="">Talk with us</a>
         </div>
       </div>
@@ -274,9 +300,10 @@
   </section>
 
   <!-- jQuery CDN -->
-  <script src="https://code.jquery.com/jquery-3.6.0.js" ></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js"></script>
   <!-- LOCAL BOOTSTRAP JAVASCRIPT INCLUDED POPPER JS 4.6.1 -->
   <script src="js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
